fixes visibility issue with modal for pages(other than home page)

--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -10,6 +10,10 @@
     display: flex !important;
     justify-content: center;
 }
+.InActive{
+    display: none !important;
+    justify-content: center;
+}
 .ModalContainer{
     display: flex;
     flex-direction: column;
